# shopstack

./: .dockerignore  .gitignore  README.md  ruff.toml
.github/workflows/: ci.yml
infra/: docker-compose.yml
infra/postgres/: init.sql
scripts/: demo.ps1
services/auth/: Dockerfile  alembic.ini  pyproject.toml  start.sh
services/auth/alembic/: env.py
services/auth/alembic/versions/: b0fc27ab4a4f_create_users.py
services/auth/src/auth_service/: api.py  config.py  db.py  models.py  rate_limit.py  security.py
services/auth/tests/: test_auth.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway_service/: api.py
services/gateway/tests/: test_gateway.py
services/notifications/: Dockerfile  alembic.ini  pyproject.toml  start.sh
services/notifications/alembic/: env.py
services/notifications/alembic/versions/: 6b551bfb4c16_create_notifications_table.py
services/notifications/src/notifications_service/: config.py  db.py  models.py  worker.py
services/notifications/tests/: test_notifications.py
services/orders/: Dockerfile  alembic.ini  pyproject.toml  start.sh
services/orders/alembic/: env.py
services/orders/alembic/versions/: e0c73395bd58_create_orders_table.py
services/orders/src/orders_service/: api.py  config.py  db.py  events.py  models.py
services/orders/tests/: test_orders.py
shared/: pyproject.toml
shared/src/shopstack_shared/clients/: auth_client.py
shared/src/shopstack_shared/contracts/: events.py
shared/src/shopstack_shared/observability/: logging.py  request_id.py
