[project]
name = "shopstack-shared"
version = "0.1.0"
description = "Shared contracts, clients, and observability utilities for ShopStack"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"