[project]
name = "shopstack-orders"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "psycopg2-binary>=2.9",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["I001"]
"alembic/versions/*.py" = ["I001", "UP007", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"